--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -1,9 +1,7 @@
 //工作总结
 
-## rem下htmlfontSize值计算
+### rem下html fontSize 值计算
 
-`
 设计稿宽 = 1920
 baseFontSize = 100  (取值100方便 px -> rem 单位换算)
 计算公式：fontSize = （(可视宽度 / 设计稿宽度）* baseFontSize)px;
-`
