--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -2,14 +2,14 @@
 
 ### 1.rem下html fontSize 值计算
 
-const ps_width = 1920;  //设计稿宽度  <br />
-const view_width       //屏幕宽度  <br />
-const baseFontSize = 100  //1920设计稿下fontSize(取值100方便 px -> rem 单位换算)  <br />
-const ratio = view_width / ps_width
-计算公式：fontSize = ratio * baseFontSize （单位：px）<br />
+> const ps_width = 1920;           //设计稿宽度  <br />
+> const view_width                 //屏幕宽度  <br />
+> const baseFontSize = 100         //1920设计稿下fontSize(取值100方便 px -> rem 单位换算)  <br />
+> const ratio = view_width / ps_width <br />
+> 计算公式：fontSize = ratio * baseFontSize （单位：px）<br />
 
-结合vw单位可以实现resize后自动调整fontSize值。<br />
-计算公式: <br />
-计算1vw对应的像素值：const 1vw = ps_width / 100; <br />
-fontSize = ratio * baseFontSize / 1vw (单位：vw) <br />
+> 结合vw单位可以实现resize后自动调整fontSize值。<br />
+> 计算公式: <br />
+> 计算1vw对应的像素值：const 1vw = ps_width / 100; <br />
+> fontSize = ratio * baseFontSize / 1vw (单位：vw) <br />
 
