添加前端错误日志收集
添加前端错误日志收集

--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -13,3 +13,46 @@
 > 计算1vw对应的像素值：const 1vw = ps_width / 100; <br />
 > fontSize = ratio * baseFontSize / 1vw (单位：vw) <br />
 
+
+### 2.前端运行错误报告
+
+> 工作中常常遇到用户访问页面白屏问题，但内网环境往往难以复现问题。 <br >
+> 所以准备从客户端下手，把客户端运行错误信息回传，结合nginx搞个简单的日志服务器。 <br >
+> 使用img标签可实现跨域上传日志信息
+```javascript
+/**
+ * ==== 用户端全局错误捕获事件 ====
+ */
+const errorReport = () => 
+  const maxCount = 100 //最大上报次数
+  let count = 0,
+    ua = window.navigator.userAgent
+  window.onerror = (msg, file, line, col, err) => {
+    if (++count > maxCount) return
+    const time = +new Date() //用户系统时间
+    const stack = err.stack //错误js堆栈
+    const report = {msg, file, line, col, stack, time, ua} //错误上报报文
+    let img = document.createElement('img')
+    img.src = `http://report.example.com/report/error?data=${encodeURIComponent(JSON.stringify(report))}`
+    img.onload = img.onerror = () => (img = null)
+    return true
+  }
+  return ''
+}
+```
+> nginx server 配置
+```c++
+server{
+	listen 80;
+	server_name report.example.com;
+	
+	#日志配置
+	access_log  logs/report.access.log  main;
+
+	#前端报告收集
+	location ~* /report/{
+		return 200 'ok';
+	}
+}
+
+```
