新增首屏加载时长报告
新增首屏加载时长报告

--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -16,9 +16,9 @@
 
 ### 2.前端运行错误报告
 
-> 工作中常常遇到用户访问页面白屏问题，但内网环境往往难以复现问题。 <br >
-> 所以准备从客户端下手，把客户端运行错误信息回传，结合nginx搞个简单的日志服务器。 <br >
-> 使用img标签可实现跨域上传日志信息
+> * 监听全局的onerror事件，但只能获取到未被cathy的错误信息。 <br >
+> * 主要上报内容为错误信息(msg)，错误所在文件(file),行（line），列（col），错误堆栈（stack），时间（time），ua。 <br >
+> * 获取到以上信息，结合map文件可以更快速的定位到问题。
 ```javascript
 /**
  * ==== 用户端全局错误捕获事件 ====
@@ -56,3 +56,26 @@ server{
 }
 
 ```
+
+### 3.前端首屏加载时长报告
+> * 通过浏览器提供的timing信息可以分析出部分加载缓慢的原因。
+> * loadEventStart为onload函数开始执行时间，navigationStart为浏览器unload前一个页面文档的开始时间节点
+> * 这里在设置个阈值threshold，减少低于阈值的报告数据,如要收集所有的，把阈值设为0即可。
+```javascript
+/**
+* ==== 首屏加载性能报告 ====
+* @param {number} threshold
+*/
+const performanceReport = (threshold = 1000) => {
+  window.onload = () => {
+    setTimeout(() => {
+      const report = window.performance;
+      const {loadEventStart, navigationStart} = report.timing;
+      if(loadEventStart, navigationStart > threshold){
+      	let img = document.createElement('img');
+	img.src = `http://report.example.com/report/error?data=${encodeURIComponent(JSON.stringify(report))}`;
+	img.onload = img.onerror = (img = null)
+      }
+    }, 0)
+  }
+}
