--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -33,7 +33,9 @@ const errorReport = () =>
     const stack = err.stack //错误js堆栈
     const report = {msg, file, line, col, stack, time, ua} //错误上报报文
     let img = document.createElement('img')
-    img.src = `http://report.example.com/report/error?data=${encodeURIComponent(JSON.stringify(report))}`
+    img.src = `http://report.example.com/report/error?data=${
+      encodeURIComponent(JSON.stringify(report))
+    }`
     img.onload = img.onerror = () => (img = null)
     return true
   }
@@ -73,7 +75,9 @@ const performanceReport = (threshold = 1000) => {
       const {loadEventStart, navigationStart} = report.timing;
       if(loadEventStart, navigationStart > threshold){
       	let img = document.createElement('img');
-	img.src = `http://report.example.com/report/error?data=${encodeURIComponent(JSON.stringify(report))}`;
+	img.src = `http://report.example.com/report/error?data=${
+	  encodeURIComponent(JSON.stringify(report))
+	}`;
 	img.onload = img.onerror = (img = null)
       }
     }, 0)
