新增项目规范约束配置
新增项目规范约束配置

--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -84,3 +84,66 @@ const performanceReport = (threshold = 1000) => {
     }, 0)
   }
 }
+
+#### 4.保持项目代码风格一致的实践小结
+使用到的工具包包括：husky、lintstage、prettier、stylelint、eslint
+husky -- git钩子工具主要是用于提取变更的文件供后续代码校验及格式化 .huskyrc文件配置如下:
+```json
+{
+  "hooks": {
+    "pre-commit": "lint-staged"
+  }
+}
+```
+lintstage -- 定义要执行的任务列表 .lintstagerc文件配置如下:
+```json
+{
+  "src/**/*.js?(x)": [
+    "prettier --write",
+    "eslint --fix",
+    "git add"
+  ],
+  "src/**/*.{css,less,scss}": [
+    "stylelint --fix",
+    "git add"
+  ]
+}
+```
+prettier -- js代码格式化工具，通过.prettierrc文件配置格式化规则：
+```json
+{
+  "arrowParens": "always",
+  "bracketSpacing": false,
+  "jsxSingleQuote": true,
+  "jsxBracketSameLine": false,
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5"
+}
+```
+stylelint -- css格式化工具,通过.stylelintrc文件配置格式化规则:
+```json
+{
+  "extends": "stylelint-config-standard",
+  "rules": {
+    "block-no-empty": null,
+    "color-no-invalid-hex": true,
+    "comment-empty-line-before": [ "always", {
+       "ignore": ["stylelint-commands", "after-comment"]
+    }],
+    "declaration-colon-space-after": "always",
+    "indentation": ["tab", {
+      "except": ["value"]
+    }],
+    "max-empty-lines": 2,
+    "rule-empty-line-before": [ "always", {
+      "except": ["first-nested"],
+      "ignore": ["after-comment"]
+    } ],
+    "unit-whitelist": ["px", "em", "rem", "%", "s"],
+    "font-family-no-missing-generic-family-keyword": null
+  }
+}
+```
+以上配置就完成了一个简单的项目规范约束。
