--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -86,7 +86,7 @@ const performanceReport = (threshold = 1000) => {
 }
 ```
 
-#### 4.保持项目代码风格一致的实践小结
+### 4.保持项目代码风格一致的实践小结
 使用到的工具包包括：husky、lintstage、prettier、stylelint、eslint
 husky -- git钩子工具主要是用于提取变更的文件供后续代码校验及格式化 .huskyrc文件配置如下:
 ```json
@@ -148,3 +148,18 @@ stylelint -- css格式化工具,通过.stylelintrc文件配置格式化规则:
 }
 ```
 以上配置就完成了一个简单的项目规范约束。
+
+### 动态按需加载第三方插件
+```javascript
+const asyncLoadThirdPartyPkg = (url) => {
+  let $script = document.createElement('script')
+  $script.setAttribute('async', 'async')
+  $script.setAttribute('defer', 'defer')
+  $script.src = url;
+  document.body.appendChild($script);
+  return new Promise((resolve, reject) => {
+    $script.onload = () => resolve()
+    $script.onerror = (err) => reject(err)
+  })
+}
+```
