--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -149,7 +149,7 @@ stylelint -- css格式化工具,通过.stylelintrc文件配置格式化规则:
 ```
 以上配置就完成了一个简单的项目规范约束。
 
-### 动态按需加载第三方插件
+### 5.动态按需加载第三方插件
 ```javascript
 const asyncLoadThirdPartyPkg = (url) => {
   let $script = document.createElement('script')
