新增加载第三方组件demo
新增加载第三方组件demo

--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -163,3 +163,37 @@ const asyncLoadThirdPartyPkg = (url) => {
   })
 }
 ```
+按需加载使用demo(./videojs.js)：
+```javascript
+
+const PKG_URL = `//unpkg.com/video.js@7.6.0/dist/video.min.js`;
+
+const loadVideoJS = (() => {
+  let script;
+  return (resolve, reject) => {
+    if(!script){
+      script = asyncLoadThirdPartyPkg(PKG_URL)
+    }
+    script.then(() => resolve(window.videojs))
+  }
+})
+
+const videojs = (...rest) => {
+  if(window.videojs)
+    return window.videojs.apply(null, rest)
+   else
+     new Promise(loadVideoJS).then(videojs => videojs.apply(null, rest))
+}
+
+export default videojs;
+```
+使用第三方插件(./index.js):
+```javascript
+import videojs from './videojs'
+//封装后，在这使用不需要考虑是否已加载成功
+let $video = document.getElementByTagName('video');
+for(let i = 0; i < $video.lenght; i++){
+  videojs($video[i])
+}
+
+```
