新增数据类型判断
新增数据类型判断

--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -197,3 +197,20 @@ for(let i = 0; i < $video.lenght; i++){
 }
 
 ```
+
+### 6.数据类型判断
+```javascript
+/**
+* ==== 类型判断 ====
+* @param {*} val
+* @param {String} type
+* @return {Boolean|String}
+*/
+const isTypeOf = (val, type) => {
+  const dt = Object.prototype.toString
+  	       .call(val)
+	       .match(/[\w]+(?=\]$)/)[0]
+	       .toLowerCase()
+  return type ? type === dt : dt;
+}
+```
