新增解析字符串内参数变量
新增解析字符串内参数变量

--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -214,3 +214,19 @@ const isTypeOf = (val, type) => {
   return type ? type === dt : dt;
 }
 ```
+
+
+### 7.解析字符串内参数变量
+```javascript
+/**
+* ==== 解析字符参数变量 ====
+* @param {String} text
+* @param {Object} data
+* @return {String}
+*/
+const render = (text, data) => {
+  return url.replace(/(?<=\{)[\w\_\.]+(?=\})/g, function( key ){
+    return data[key];
+  });
+}
+```
