书写问题修改
书写问题修改

--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -176,7 +176,7 @@ const loadVideoJS = (() => {
     }
     script.then(() => resolve(window.videojs))
   }
-})
+})()
 
 const videojs = (...rest) => {
   if(window.videojs)
@@ -225,7 +225,7 @@ const isTypeOf = (val, type) => {
 * @return {String}
 */
 const render = (text, data) => {
-  return url.replace(/(?<=\{)[\w\_\.]+(?=\})/g, function( key ){
+  return url.replace(/(?<=\{)[\w\_\.]+(?=\})/g,(key) => {
     return data[key];
   });
 }
