--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -15,7 +15,47 @@
 
 提升效率工具：开发的时候引入(px2rem-loader | postcss-px2rem),如果使用了styled-component替换成styled-px2rem。则我们在开发阶段就可以直接使用设计稿测量得到的值写css样式，转换的工作交由webpack完成。
 
-### 2.前端运行错误报告
+### 2.日志上报代码实现
+```javascript
+/**
+* ==== 日志上报 ====
+* @param {Object} report 
+* @type {String} type 日志类型(后台筛选使用)
+*/
+const uploadReport = (report, type) => {
+  const ua = navigator.userAgent;
+  const time = +new Date;
+  const url = `http://report.example.com/report/${type}?data=${encodeURIComponent(
+    JSON.stringify({report, ua, time})
+  )}`
+  if(navigator.sendBeacon){    //新日志手机API(无响应，可在页面unload时使用)
+    navigator.sendBeacon(url)
+  } else {
+    let img = document.createElement('img');
+    img.src = url;
+    img.onload = img.onerror = () => (img = null)
+  }
+}
+
+```
+> nginx server 配置
+```c++
+server{
+  listen 80;
+  server_name report.example.com;
+
+  #日志配置
+  access_log  logs/report.access.log  main;
+
+  #前端报告收集
+  location ~* /report/{
+    return 200 'ok';
+  }
+}
+
+```
+
+### 3.前端运行错误报告
 
 > * 监听全局的onerror事件，但只能获取到未被cathy的错误信息。 <br >
 > * 主要上报内容为错误信息(msg)，错误所在文件(file),行（line），列（col），错误堆栈（stack），时间（time），ua。 <br >
@@ -25,42 +65,20 @@
  * ==== 用户端全局错误捕获事件 ====
  */
 const errorReport = () => 
-  const maxCount = 100 //最大上报次数
-  let count = 0,
-    ua = window.navigator.userAgent
+  let maxCount = 100, //最大上报次数
+      count = 0;
   window.onerror = (msg, file, line, col, err) => {
     if (++count > maxCount) return
     const time = +new Date() //用户系统时间
-    const stack = err.stack //错误js堆栈
-    const report = {msg, file, line, col, stack, time, ua} //错误上报报文
-    let img = document.createElement('img')
-    img.src = `http://report.example.com/report/error?data=${
-      encodeURIComponent(JSON.stringify(report))
-    }`
-    img.onload = img.onerror = () => (img = null)
-    return true
+    const stack = err ? err.stack : err; //错误js堆栈
+    const report = {msg, file, line, col, stack, time} //错误上报报文
+    uploadReport(report, 'error');
+    return true;
   }
-  return ''
 }
 ```
-> nginx server 配置
-```c++
-server{
-	listen 80;
-	server_name report.example.com;
-	
-	#日志配置
-	access_log  logs/report.access.log  main;
 
-	#前端报告收集
-	location ~* /report/{
-		return 200 'ok';
-	}
-}
-
-```
-
-### 3.前端首屏加载时长报告
+### 4.前端首屏加载时长报告
 > * 通过浏览器提供的timing信息可以分析出部分加载缓慢的原因。
 > * loadEventStart为onload函数开始执行时间，navigationStart为浏览器unload前一个页面文档的开始时间节点
 > * 这里在设置个阈值threshold，减少低于阈值的报告数据,如要收集所有的，把阈值设为0即可。
@@ -75,18 +93,14 @@ const performanceReport = (threshold = 1000) => {
       const report = window.performance;
       const {loadEventStart, navigationStart} = report.timing;
       if(loadEventStart, navigationStart > threshold){
-      	let img = document.createElement('img');
-	img.src = `http://report.example.com/report/error?data=${
-	  encodeURIComponent(JSON.stringify(report))
-	}`;
-	img.onload = img.onerror = (img = null)
+      	uploadReport(report, 'performance');
       }
     }, 0)
   }
 }
 ```
 
-### 4.保持项目代码风格一致的实践小结
+### 5.保持项目代码风格一致的实践小结
 使用到的工具包包括：husky、lintstage、prettier、stylelint、eslint
 husky -- git钩子工具主要是用于提取变更的文件供后续代码校验及格式化 .huskyrc文件配置如下:
 ```json
@@ -149,7 +163,7 @@ stylelint -- css格式化工具,通过.stylelintrc文件配置格式化规则:
 ```
 以上配置就完成了一个简单的项目规范约束。
 
-### 5.动态按需加载第三方插件
+### 6.动态按需加载第三方插件
 ```javascript
 const asyncLoadThirdPartyPkg = (url) => {
   let $script = document.createElement('script')
@@ -198,7 +212,7 @@ for(let i = 0; i < $video.lenght; i++){
 
 ```
 
-### 6.数据类型判断
+### 7.数据类型判断
 ```javascript
 /**
 * ==== 类型判断 ====
