错别字修改
错别字修改

--- a/工作总结/201907.md
+++ b/工作总结/201907.md
@@ -28,7 +28,7 @@ const uploadReport = (report, type) => {
   const url = `http://report.example.com/report/${type}?data=${encodeURIComponent(
     JSON.stringify({report, ua, time})
   )}`
-  if(navigator.sendBeacon){    //新日志手机API(无响应，可在页面unload时使用)
+  if(navigator.sendBeacon){    //新日志收集API(无响应，可在页面unload时使用)
     navigator.sendBeacon(url)
   } else {
     let img = document.createElement('img');
