--- a/工作总结/20191103.md
+++ b/工作总结/20191103.md
@@ -1,3 +1,4 @@
+```javascript
 //父类
 function p(){
 	this.name = 'parent';
@@ -9,6 +10,7 @@ p.prototype.say = function(){
 }
 // var pp = new p();
 // console.log(pp.say())
+```
 
 1.构造函数继承
 ```javascript
