--- a/工作总结/202008学习笔记.md
+++ b/工作总结/202008学习笔记.md
@@ -13,3 +13,7 @@ let _new = function(constructor, ...rest){
 }
 
 ```
+### 知识点总结
+1. 引用类型的隐式转换在运算的时候，会先调用valueOf方法，如果valueOf返回的还是包装类型，那么再调用toString方法。
+2. 引用类型的比较是引用（堆内存地址）的比较，如果和基础类型比较则会在隐式转换后比较。
+3. 基础类型隐式转换规则：有string转string，其他的转number。
