--- a/工作总结/202008学习笔记.md
+++ b/工作总结/202008学习笔记.md
@@ -17,3 +17,6 @@ let _new = function(constructor, ...rest){
 1. 引用类型的隐式转换在运算的时候，会先调用valueOf方法，如果valueOf返回的还是包装类型，那么再调用toString方法。
 2. 引用类型的比较是引用（堆内存地址）的比较，如果和基础类型比较则会在隐式转换后比较。
 3. 基础类型隐式转换规则：有string转string，其他的转number。
+4. 进程和线程的区别
+    + 进程（process）：是程序的一次执行过程，是一个动态概念，是程序在执行过程中分配和管理资源的基本单位。
+    + 线程（thread）：是CPU调度和分派的基本单位，它可与同属一个进程的其他的线程共享进程所拥有的全部资源，是执行一段指令所需要的时间。
