--- a/工作总结/202011学记笔记.md
+++ b/工作总结/202011学记笔记.md
@@ -1,3 +1,4 @@
+```javascript
 // 模拟实现call
 Function.prototype._call = function() {
     var _this = arguments[0] || window,
@@ -31,3 +32,4 @@ Function.prototype._bind = function () {
         return eval('_this.func(' + [].concat(arr1,arr2).join(',') + ')')
     }
 }
+```
