Update and rename 2023年笔记 to 2023年笔记.md

--- a/工作总结/2023年笔记.md
+++ b/工作总结/2023年笔记.md
@@ -1,4 +1,4 @@
-
+```javascript
 // 数字转中文大写
 function numberConvertToUppercase(num){
     let unit = "拾佰仟万拾佰仟亿拾佰仟";
@@ -12,3 +12,5 @@ function numberConvertToUppercase(num){
     }
     return str.replace(/(零(仟|佰|拾))+/g, "零").replace(/零+$/, "");
 }
+
+```
