--- a/工作总结/202303笔记.md
+++ b/工作总结/202303笔记.md
@@ -1,1 +1,1 @@
--- canvas知识点：canvas有width/height和style.width/style.height，当两者不一致时会将canvan缩放到style.width/style.height大小。
+canvas知识点：canvas有width/height和style.width/style.height，当两者不一致时会将canvan缩放到style.width/style.height大小。
